virtual task executor